--- a/src/pages/hotel/hotel.css
+++ b/src/pages/hotel/hotel.css
@@ -13,10 +13,17 @@
   position: absolute;
 }
 
-.bookNow{
-    position: absolute;
-    top: 10px;
-    right: 0;
+.bookNow {
+  position: absolute;
+  top: 10px;
+  right: 0;
+  border: none;
+  padding: 10px 20px;
+  background-color: #0071c2;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 .hotelTitle {
@@ -39,10 +46,10 @@
   font-weight: 500;
 }
 
-.hotelImages{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+.hotelImages {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .hotelImgWrapper {
@@ -52,4 +59,49 @@
 .hotelImg {
   width: 100%;
   object-fit: cover;
+}
+
+.hotelDetails {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.hotelDetailsTexts {
+  flex: 3;
+}
+
+.hotelDesc {
+  font-size: 14px;
+  margin-top: 20px;
+}
+
+.hotelDetailsPrice {
+  flex: 1;
+  background-color: #ebf3ff;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.hotelDetailsPrice > h1 {
+  font-size: 18px;
+  color: #555;
+}
+.hotelDetailsPrice > span {
+  font-size: 14px;
+}
+.hotelDetailsPrice > h2 {
+  font-weight: 300;
+}
+.hotelDetailsPrice > button {
+  border: none;
+  padding: 10px 20px;
+  background-color: #0071c2;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 5px;
 }
