--- a/src/pages/hotel/hotel.css
+++ b/src/pages/hotel/hotel.css
@@ -106,3 +106,15 @@
   cursor: pointer;
   border-radius: 5px;
 }
+
+/* Slider */
+
+.slider{
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #0071c2;
+  z-index: 999;
+}
