--- a/src/pages/hotel/hotel.css
+++ b/src/pages/hotel/hotel.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  position: absolute;
+  position: relative;
 }
 
 .bookNow {
@@ -113,8 +113,18 @@
   position: sticky;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: #0071c2;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.426);
   z-index: 999;
+  display: flex;
+  align-items: center;
+}
+
+.sliderWrapper{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
