--- a/src/pages/hotel/hotel.css
+++ b/src/pages/hotel/hotel.css
@@ -113,8 +113,8 @@
   position: sticky;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.426);
   z-index: 999;
   display: flex;
@@ -127,4 +127,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.sliderImg{
+  width: 80%;
+  height: 80vh;
 }
